services/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    app: argocd
  name: argocd-ing
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.192.168.56.101.sslip.io
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.192.168.56.101.sslip.io
    secretName: tls-rancher-ingress
